# first-rust-webassembly

./: Cargo.toml  LICENSE_MIT  README.md  index.html
src/: lib.rs
www/: index.js  package.json
