[package]
name = "first-rust-webassembly"
version = "0.1.0"
authors = ["Matheus Assis <assisr.matheus@gmail.com>"]
description = "My first rust/webassembly experiment"
repository = "https://github.com/AssisrMatheus/first-rust-webassembly"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
